--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/src/lib/svg/favicon.svg" sizes="any">
+		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism-okaidia.min.css'>
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
