--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/src/lib/svg/favicon.svg" sizes="any">
-		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism-okaidia.min.css'>
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body>
-		%sveltekit.body%
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" type="image/svg+xml" href="/src/lib/svg/favicon.svg" sizes="any">
+	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/prism/1.17.1/themes/prism-okaidia.min.css'>
+	<meta name="viewport" content="width=device-width" />
+	<script>
+		(function (apiKey) {
+			(function (p, e, n, d, o) {
+				var v, w, x, y, z; o = p[d] = p[d] || {}; o._q = o._q || [];
+				v = ['initialize', 'identify', 'updateOptions', 'pageLoad', 'track']; for (w = 0, x = v.length; w < x; ++w)(function (m) {
+					o[m] = o[m] || function () { o._q[m === v[0] ? 'unshift' : 'push']([m].concat([].slice.call(arguments, 0))); };
+				})(v[w]);
+				y = e.createElement(n); y.async = !0; y.src = 'https://cdn.pendo.io/agent/static/' + apiKey + '/pendo.js';
+				z = e.getElementsByTagName(n)[0]; z.parentNode.insertBefore(y, z);
+			})(window, document, 'script', 'pendo');
+		})('832dadba-0aeb-4cac-5950-6042549a336e');
+	</script>
+	%sveltekit.head%
+</head>
+
+<body>
+	%sveltekit.body%
+</body>
+
 </html>
